# MeetScript

./: .gitignore  README.md
meetscript-api/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
meetscript-api/app/: __init__.py  main.py
meetscript-api/app/api/: deps.py
meetscript-api/app/api/v1/: api_keys.py  auth.py  exports.py  sse.py  (+9 more)
meetscript-api/app/core/: celery_app.py  config.py  database.py  redis_client.py  security.py
meetscript-api/app/middleware/: access_log.py  metrics.py  rate_limit.py  request_id.py
meetscript-api/app/models/: __init__.py  api_key.py  audit_log.py  base.py  meeting.py  model_config.py  subtitle.py  task.py  token_usage.py  translation.py  user.py
meetscript-api/app/schemas/: api_key.py  auth.py  meeting.py  model_config.py  search.py  sse.py  subtitle.py  task.py  token_usage.py  translation.py
meetscript-api/app/services/: __init__.py  api_key_service.py  asr_service.py  audio_processor.py  audit_service.py  auth_service.py  cache_service.py  diarization_service.py  file_service.py  meeting_service.py  model_registry.py  search_service.py  subtitle_service.py  summary_service.py  task_service.py  token_service.py  translation_service.py
meetscript-api/app/tasks/: __init__.py  asr_task.py  audio_task.py  export_task.py  process_meeting.py  summary_task.py  translation_task.py
meetscript-api/app/utils/: srt_parser.py  time_utils.py  token_counter.py
meetscript-api/migrations/: env.py
meetscript-api/migrations/versions/: 001_initial_schema.py
meetscript-api/nginx/: nginx.conf
(+47 files in other folders)
