[project]
name = "meetscript-api"
version = "0.1.0"
description = "MeetScript Enterprise Meeting Minutes Platform - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "celery[redis]>=5.4.0",
    "redis>=5.1.0",
    "minio>=7.2.0",
    "oss2>=2.19.0",
    "dashscope>=1.20.0",
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.1",
    "tiktoken>=0.7.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi,celery]>=2.15.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
